[gd_scene load_steps=4 format=3 uid="uid://gka24ak7goix"]

[ext_resource type="Script" uid="uid://blup4fvf8wni6" path="res://high_scores.gd" id="1_dlwni"]
[ext_resource type="FontFile" uid="uid://byvru7flwfdbh" path="res://Fonts/Arcane Nine.otf" id="2_dlwni"]
[ext_resource type="FontFile" uid="uid://bgl36lnl5f1c3" path="res://Fonts/MADE TOMMY Regular_PERSONAL USE.otf" id="3_dlwni"]

[node name="HighScores" type="CanvasLayer"]
script = ExtResource("1_dlwni")

[node name="HighScoreScreen" type="CanvasLayer" parent="."]
visible = false

[node name="Title" type="Label" parent="HighScoreScreen"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.5
offset_right = 138.5
offset_bottom = 82.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_dlwni")
theme_override_font_sizes/font_size = 40
text = "high scores"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="HighScoreScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 96.0
offset_right = 104.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_dlwni")
theme_override_font_sizes/font_size = 20
text = "BACK"

[node name="List" type="Label" parent="HighScoreScreen"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 72.0
offset_right = 86.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_dlwni")
text = "1. Test - 12345"
horizontal_alignment = 1

[node name="NewHighScoreScreen" type="CanvasLayer" parent="."]
visible = false

[node name="Title" type="Label" parent="NewHighScoreScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -152.0
offset_right = 139.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dlwni")
theme_override_font_sizes/font_size = 40
text = "congratulations"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title2" type="Label" parent="NewHighScoreScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -112.0
offset_right = 141.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_dlwni")
theme_override_font_sizes/font_size = 30
text = "New high score!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameBox" type="LineEdit" parent="NewHighScoreScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -40.0
offset_right = 48.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_dlwni")
placeholder_text = "Enter name"
max_length = 32
emoji_menu_enabled = false

[node name="SubmitButton" type="Button" parent="NewHighScoreScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -40.0
offset_right = 152.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_dlwni")
text = "Submit"

[connection signal="pressed" from="HighScoreScreen/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NewHighScoreScreen/SubmitButton" to="." method="_on_submit_button_pressed"]
